--- a/aula001/index.html
+++ b/aula001/index.html
@@ -35,7 +35,7 @@
                 <button>Entrar</button>
           
                 <a href="#" target="_self" hreflang="pt-br" rel="next" class="insta-login">Entrar com o Facebook</a>
-                <a href="https://pt-br.facebook.com/reg/" target="_black" rel="external" hreflang="pt-br" class="esqueceu-senha">Esqueceu a senha?</a>
+                <a href="#" target="_black" rel="external" hreflang="pt-br" class="esqueceu-senha">Esqueceu a senha?</a>
             </div>
        
 
